@@ -47,7 +47,7 @@ public:
 	virtual void set_location(SDL_Rect const &rect);
 
 protected:
-	bool requires_event_focus() const { return enabled(); }
+	bool requires_event_focus(const SDL_Event *event=NULL) const;
 	virtual void handle_event(const SDL_Event& event);
 	virtual void draw_contents();
 
