@@ -10,6 +10,9 @@ Version 1.2.1+svn:
  * multiplayer maps:
     * new map: The Manzivan Traps
     * revised map: Sablestone Delta, Sulla's Ruins
+ * user interface:
+    * smarter focus handling when user input is irrelevant to the current focus
+      but relevant to another widget
 
 Version 1.2.1:
  * campaigns:
